# samples-python

./: .gitignore  CLAUDE.md  Makefile  PERFORMANCE_ANALYSIS.md  README.md  pyproject.toml  requirements.txt  temporal-sample.yaml  temporal-samples.yaml  temporal.sqlite  temporal.toml  util.py
.github/: CODEOWNERS  dependabot.yml
activities_sticky_queues/: README.md  starter.py  tasks.py  worker.py
activity_sticky_queues/: README.md  starter.py  tasks.py  worker.py
activity_worker/: README.md  activity_worker.py
batch-sliding-window/: README.md  __init__.py  batch_workflow.py  record_processor_workflow.py  run_starter.py  run_worker.py  sliding_window_workflow.py
batch_daily/: README.md  activities.py  create_schedule.py  run_worker.py  starter.py  workflows.py
batch_sliding_window/: README.md  __init__.py  batch_workflow.py  record_loader_activity.py  record_processor_workflow.py  run_starter.py  run_worker.py  sliding_window_workflow.py  starter.py  worker.py
bedrock/: README.md  requirements.txt  temporal-sample.yaml
benign_application_error/: README.md  activities.py  starter.py  worker.py  workflow.py
braintrust/: README.md  pyproject.toml  start_workflow.py  worker.py
braintrust/activities/: invoke_model.py
braintrust/agents/: config.py  research_planning.py  research_query_generation.py  research_report_synthesis.py  research_web_search.py  shared.py
braintrust/tests/: test_e2e.py
braintrust/workflows/: deep_research_workflow.py
claude_agents/: __init__.py
cloud_export_to_parquet/: README.md  create_schedule.py  data_trans_activities.py  pyproject.toml  run_worker.py  workflows.py
context_propagation/: README.md  activities.py  interceptor.py  shared.py  starter.py  worker.py  workflows.py
custom_converter/: README.md  shared.py  starter.py  worker.py  workflow.py
custom_decorator/: README.md  activity_utils.py  starter.py  worker.py
custom_metric/: README.md  activity.py  activity_worker.py  client.py  shared.py  starter.py  worker.py  workflow.py  workflow_worker.py
custom_worker_tuner/: README.md  db_pool.py  downstream.py  shared.py  starter.py  supplier.py  worker.py
dan/: _signal.py  activity_retries.py  asyncio_exceptions.py  base.py  base_with_tracing.py  cancellation.py  cancellation_and_handlers.py  cancellation_and_handlers_etc.py  child_workflow.py  client_retry_config.py  constants.py  deadlock.py  docs_message_passing.py  docs_message_passing_async.py  docs_update_basic.py  docs_workflow_init.py  exception_in_handler.py  execute_update_can_target_existing_update.py  honor-completion-with-immediate-effect.py  investign_update_BadUpdateWFExecuationMessage.py  issue_673.py  logging_update.py  non_typesafe_start_workflow.py  overloads.py  task_failure.py  temporal_update_and_start_workflow.py  timer_callback_exception.py  two_updates.py  update.py  update_completion_after_main.py  update_deduplication.py  update_error.py  update_non_typesafe.py  update_with_tracing.py  updates_do_not_block_continue_as_new.py  upsert_search_attribute_572.py  user-kunal-deadlock-repro.py  utils.py  wait_condition_busy_loop.py  wait_handlers_finish.py  (+8 more)
dsl/: README.md  starter.py  temporal-sample.yaml  worker.py  workflow.py  workflow1.yaml  workflow2.yaml
eager_wf_start/: README.md  activities.py  run.py  workflows.py
encryption/: README.md  codec.py  codec_server.py  starter.py  temporal-sample.yaml  worker.py
encryption_jwt/: .gitignore  README.md  codec.py  codec_server.py  encryptor.py  starter.py  worker.py
env_config/: README.md  load_default.py  load_profile.py
expense/: README.md  UI_SPECIFICATION.md  __init__.py  activities.py  starter.py  ui.py  worker.py  workflow.py
export_proto_to_parquet/: LICENSE  README.md  data_trans_activities.py  dataobject.py  run_worker.py  run_workflow.py  shared.py  workflows.py
external_storage/: README.md  _sample_data.py  codec.py  codec_server.py  handler.py  s3.py  starter.py  worker.py  workflows.py
external_storage_redis/: README.md  __init__.py  _client.py  _driver.py  redis_asyncio.py  workflows.py
fast_api/: README.md  readme.md  requirements.txt  run_fast.py  run_worker.py
flask_api/: README.md  readme.md  requirements.txt  run_flask.py  run_worker.py
gevent_async/: README.md  activity.py  executor.py  starter.py  worker.py  workflow.py
google_adk/: README.md
google_adk_agents/: README.md
google_genai_plugin/: README.md  __init__.py
hello/: README.md  hello_activity.py  hello_activity_async.py  hello_activity_cancel.py  hello_activity_choice.py  hello_activity_heartbeat.py  hello_activity_method.py  hello_activity_multiprocess.py  hello_activity_retry.py  hello_activity_threaded.py  hello_async_activity_completion.py  hello_cancellation.py  hello_change_log_level.py  hello_child_workflow.py  hello_child_workflow_cancellation.py  hello_child_workflow_client_cancels.py  hello_continue_as_new.py  hello_cron.py  hello_dataclass.py  hello_exception.py  hello_exec.py  hello_local_activity.py  hello_mtls.py  hello_parallel_activity.py  hello_patch.py  hello_patched.py  hello_query.py  hello_search_attributes.py  hello_signal.py  hello_standalone_activity.py  hello_update.py  hello_workflow.py  hello_workflow_cancellation.py  hello_workflow_update.py  multiple_workers.py  temporal-sample.yaml
hello_nexus/: README.md  clean  endpoint_description.md  service.py  simple.py  temporal-sample.yaml
hello_world/: README.md  (+1 more)
lambda_worker/: .gitignore  README.md  activities.py  deploy-lambda.sh  iam-role-for-temporal-lambda-invoke-test.yaml  lambda_function.py  pyproject.toml  starter.py  workflows.py
survey-poll-SA/: README.md  activities.py  iam-role-for-lambda-multi-arns-prod.yaml  lambda_function.py  lambda_invoker.py  load_starter.py  models.py  pyproject.toml  starter.py  survey-s3-write.json  worker.py  workflows.py
survey-poll-SA/ui/: app.py
tool_registry_incident_triage/: README.md  approval_workflow.py  client.py  pyproject.toml  triage_activity.py  triage_types.py  triage_workflow.py  worker.py
tool_registry_incident_triage/tests/: test_triage_activity.py
(+1472 files in other folders)
