[project]
name = "temporalio-samples-lambda-worker"
version = "0.1a1"
description = "Temporal.io Python SDK Lambda worker sample"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = ["temporalio[lambda-worker-otel]>=1.26.0,<2"]

[dependency-groups]
dev = [
    "ruff>=0.5.0,<0.6",
    "mypy>=1.4.1,<2",
    "poethepoet>=0.36.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.poe.tasks]
format = [
    { cmd = "uv run ruff check --select I --fix" },
    { cmd = "uv run ruff format" },
]
lint = [
    { cmd = "uv run ruff check --select I" },
    { cmd = "uv run ruff format --check" },
    { ref = "lint-types" },
]
lint-types = "uv run --all-groups mypy --check-untyped-defs --namespace-packages ."

[tool.ruff]
target-version = "py310"
